--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     dplyr,
     ggplot2, 
     reshape2,
-    stats
+    stats,
+    ggrepel,
+    factoextra
 Suggests:
     testthat,
     knitr
