--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,9 @@ Imports:
     factoextra
 Suggests:
     testthat,
-    knitr
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.2.0)
-    
+VignetteBuilder: knitr
