--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,12 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     dplyr,
-    ggplot2, 
+    ggplot2,
     reshape2,
     stats,
     ggrepel,
-    factoextra
+    factoextra,
+    magrittr
 Suggests:
     testthat,
     knitr,
