Add some suggested packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,9 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
-    cluster
+    cluster,
+    tibble,
+    bayesdfa
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.2.0)
