--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export("%>%")
 export(add_features_flr)
 export(ensemble_2stage)
+export(ensemble_2stage_weights)
 export(ensemble_simple)
 export(plot_clusters)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_polygon)
