Fixes to plot_som

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,14 +21,16 @@ Imports:
     magrittr,
     tidyr,
     rlang,
-    purrr
+    purrr,
+    cowplot
 Suggests:
     testthat,
     knitr,
     rmarkdown,
     cluster,
     tibble,
-    bayesdfa
+    bayesdfa,
+    kohonen
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.2.0)
