--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,15 @@ export(ensemble_2stage)
 export(ensemble_2stage_weights)
 export(ensemble_simple)
 export(plot_clusters)
+export(plot_som)
+export(plot_som_individual)
+importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,geom_hex)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_polygon)
 importFrom(ggplot2,ggplot)
