--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(add_features_flr)
 export(ensemble_2stage)
 export(ensemble_2stage_weights)
 export(ensemble_simple)
+export(fits2data_mod)
+export(fits2data_ts)
 export(plot_clusters)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
