--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,4 +24,6 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_colour_brewer)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(stats,median)
+importFrom(stats,sd)
 importFrom(stats,weighted.mean)
