--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,9 @@ Suggests:
     cluster,
     tibble,
     bayesdfa,
-    kohonen
+    kohonen,
+    viridisLite,
+    fda
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.2.0)
